<resources>
    <string name="app_site_base_url">http://drugstore24x7.net</string>
    <string name="app_name">MEDEXPERT</string>
    <string name="app_name_med">MED</string>
    <string name="app_name_expert">EXPERT</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_copyright">&#169; Med expert, inc.</string>
    <string name="settings_string">Settings</string>
    <string name="about_string">About</string>
    <string name="home_string">Home</string>
    <string name="catalog_string">Catalog</string>
    <string name="favorites_string">Favorites</string>
    <string name="viewed_string">Recently viewed</string>
    <string name="sellers_string">Sellers</string>

    <string name="catal_one">one</string>
    <string name="catal_two">two</string>
    <string name="catal_three">three</string>


    <string name="page">PAGE</string>

    <string name="search_bar_input_hint">Поиск</string>

    <string name="about_attention_text">Attention!!!</string>
    <string name="about_attention_body">This application neither sell any medicines nor promote any sites.\nAll price and links for information purpose only.\nWe are not responsible for any information in this app.</string>
    <string name="about_email">contact@edpills365.net</string>
    <string name="about_site">www.edpills365.net</string>


    <!--category names-->
    <!--<string name="category_name_all">Все новости</string>-->
    <string name="name_APP">MedExpert</string>
    <string name="category_name_business">Business</string>
    <string name="category_name_history">History</string>
    <string name="category_name_interview">Interview</string>
    <!--<string name="settings_string">Настройки</string>-->
    <string name="default_user_name_stub">Войти в личный кабинет</string>

    <string name="tutorial_next_text">NEXT</string>
    <string name="tutorial_launch_app_text">LAUNCH APP</string>
    <string name="tutorial_catalog_got_it_text">GOT IT</string>
    <string name="tutorial_1_header">Favorites list</string>
    <string name="tutorial_1_text">Add pills to favorite list\nfor quick access</string>
    <string name="tutorial_2_header">Application manuals</string>
    <string name="tutorial_2_text">Online application manuals\nfor more than 2.000 medicines</string>

    <string name="catalog_popular_categories_header_txt">Popular categories</string>
    <string name="catalog_all_categories_header_txt">All categories</string>

    <string name="catalog_tutorial_swipe_text">SWIPE CARDS TO THE RIGHT\nFOR ADDING TO FAVORITES LIST</string>

    <string name="category_average_text">avg. price</string>
    <string name="category_from_text">from</string>
    <string name="category_generic_text">Generic</string>
    <string name="attention_title">Attention</string>
    <string name="attention_text">This application neither sell any medicines nor promote any sites. All prices and links are for informational purpose only.</string>
    <string name="attention_continue">CONTINUE</string>
    <string name="sort_dialog_title">Sort by</string>
    <string-array name="sortBy">
        <item>Name (A to Z)</item>
        <item>Name (Z to A)</item>
        <item>Rating (high to low)</item>
        <item>Rating (low to high)</item>
    </string-array>

</resources>
