<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/about_content_top_margin"
    android:layout_marginLeft="@dimen/about_content_side_margin"
    android:layout_marginRight="@dimen/about_content_side_margin">
    
    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="@dimen/about_logo_icon_size"
        android:layout_height="@dimen/about_logo_icon_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/about_logo_icon_right_margin"
        android:layout_marginBottom="@dimen/about_logo_icon_bottom_margin"
        android:src="@drawable/med_logo_sidebar"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_header_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_6dp"
        android:layout_marginTop="@dimen/padding_8dp"
        style="@style/about_header_text"
        android:textColor="@color/med_blue"
        android:layout_toRightOf="@id/about_logo"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:text="@string/app_name_med"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_header_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_6dp"
        android:layout_marginTop="@dimen/padding_8dp"
        style="@style/about_header_text"
        android:textColor="@color/med_dark_blue"
        android:layout_toRightOf="@id/about_header_1"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:text="@string/app_name_expert"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_8dp"
        android:textColor="@color/color_light_grey"
        android:textSize="@dimen/about_small_text_size"
        android:layout_toRightOf="@id/about_logo"
        android:layout_below="@id/about_header_1"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:text="@string/app_version"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_8dp"
        android:textColor="@color/color_light_grey"
        android:textSize="@dimen/about_small_text_size"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/about_logo"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:text="@string/app_copyright"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_attention_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_edittext"
        android:textSize="@dimen/about_middle_text_size"
        android:layout_below="@id/about_copyright"
        android:layout_alignParentLeft="true"
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:text="@string/about_attention_text"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_attention_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/about_text_color"
        android:textSize="@dimen/about_middle_text_size"
        android:lineSpacingExtra="@dimen/about_text_line_extra"
        android:layout_below="@id/about_attention_header"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:text="@string/about_attention_body"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_edittext"
        android:textSize="@dimen/about_middle_text_size"
        android:layout_below="@id/about_attention_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/about_content_top_margin"
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:text="@string/about_email"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_edittext"
        android:textSize="@dimen/about_middle_text_size"
        android:layout_below="@id/about_email"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/about_logo_icon_bottom_margin"
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:text="@string/about_site"
        />
    </RelativeLayout>