<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/tutorial_pink"
    android:paddingTop="?attr/actionBarSize">

    <ImageView
        android:id="@+id/tutorial_img"
        android:layout_width="@dimen/tutorial_image_size"
        android:layout_height="@dimen/tutorial_image_size"/>

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tutorial_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tutorial_main_text_margin_bottom"
        android:layout_marginLeft="@dimen/tutorial_margin_top_bottom"
        android:layout_marginRight="@dimen/tutorial_margin_top_bottom"
        style="@style/tutorial_header_text_style"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:text="@string/tutorial_1_header"
        />

    <com.devspark.robototextview.widget.RobotoTextView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tutorial_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/tutorial_margin_top_bottom"
        android:layout_marginRight="@dimen/tutorial_margin_top_bottom"
        android:layout_marginBottom="@dimen/tutorial_main_text_margin_bottom"
        style="@style/tutorial_content_text_style"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:text="@string/tutorial_1_text"
        />
    
    <com.devspark.robototextview.widget.RobotoButton
        android:id="@+id/tutorial_btn"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="72dp"
        android:layout_marginLeft="72dp"
        app:fontFamily="roboto"
        app:textWeight="medium"
        android:textSize="@dimen/about_middle_text_size"
        android:textColor="@color/tutorial_pink"
        android:text="@string/tutorial_next_text"
        android:background="@drawable/tutorial_btn_back"/>
</LinearLayout>