<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/med_white">
    <LinearLayout
        android:id="@+id/left_bar_settings"
        android:layout_width="fill_parent"
        android:minWidth="@dimen/news_card_small_width"
        android:layout_height="@dimen/category_item_height"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:background="@drawable/category_item_selector">
        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:layout_marginLeft="@dimen/padding_16dp"
            android:layout_marginTop="@dimen/padding_12dp"
            android:layout_marginBottom="@dimen/padding_12dp"
            android:src="@drawable/med_ic_grey_settings"/>
        <com.devspark.robototextview.widget.RobotoTextView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/vox_app_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/side_bar_text.category"
            android:layout_marginLeft="@dimen/settings_text_margin"
            app:fontFamily="roboto"
            app:textWeight="normal"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_string"
            />
    </LinearLayout>
    <ScrollView
        android:id="@+id/left_bar_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/left_bar_settings">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/side_hider_height"
                android:background="@color/med_blue">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/side_hider_padding"
                    android:paddingTop="@dimen/side_hider_padding"
                    android:paddingBottom="@dimen/side_hider_padding"
                    android:gravity="center_vertical"
                    >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@drawable/app_icon" />
                <!--<ImageView-->
                    <!--android:id="@+id/left_bar_user_avatar"-->
                    <!--android:layout_width="@dimen/user_avatar_diameter"-->
                    <!--android:layout_marginLeft="@dimen/padding_16dp"-->
                    <!--android:layout_marginTop="@dimen/padding_16dp"-->
                    <!--android:layout_gravity="top|left"-->
                    <!--android:layout_height="@dimen/user_avatar_diameter"-->
                    <!--android:background="@drawable/vox_upic_sidebar"/>-->
                <com.devspark.robototextview.widget.RobotoTextView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/side_title"
                    app:fontFamily="roboto"
                    app:textWeight="normal"
                    android:text="@string/app_name_med"
                    android:layout_marginLeft="@dimen/side_hider_pad_16"
                    android:textColor="#ffffff" />

                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/side_title"
                        app:fontFamily="roboto"
                        app:textWeight="normal"
                        android:text="@string/app_name_expert"
                        android:textColor="#000000" />
                </LinearLayout>
            </FrameLayout>
            <include
                android:id="@+id/left_bar_category_all"
                layout="@layout/category_item">
            </include>
            <include
                android:id="@+id/left_bar_category_vox_populi"
                layout="@layout/category_item">
            </include>
            <include
                android:id="@+id/left_bar_category_history"
                layout="@layout/category_item">
            </include>
            <include
                android:id="@+id/left_bar_category_business"
                layout="@layout/category_item">
            </include>
            <include
                android:id="@+id/left_bar_category_interview"
                layout="@layout/category_item">
            </include>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>