<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    >

    <ScrollView
        android:id="@+id/homer_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_h_catal"
                    android:id="@+id/bl_catalog"
                    android:gravity="center_vertical">
                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/home_title"
                        android:layout_marginLeft="@dimen/home_pad_72"
                        app:fontFamily="roboto"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/catalog_string"
                        android:layout_alignParentLeft="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/med_ic_grey_right_arrow"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/home_pad_16" />
                    </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/line"
                    android:layout_marginLeft="@dimen/home_pad_72">
                    </LinearLayout>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_h_catal"
                    android:id="@+id/bl_catalog_one"
                    android:gravity="center_vertical">
                    <com.devspark.robototextview.widget.RobotoTextView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/home_text"
                        android:layout_marginLeft="@dimen/home_pad_72"
                        app:fontFamily="roboto"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Allergy"
                        android:layout_alignParentLeft="true" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/line"
                    android:layout_marginLeft="@dimen/home_pad_72">
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_h_catal"
                        android:id="@+id/bl_catalog_two"
                        android:gravity="center_vertical">
                        <com.devspark.robototextview.widget.RobotoTextView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/home_text"
                            android:layout_marginLeft="@dimen/home_pad_72"
                            app:fontFamily="roboto"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Cardiovascular"
                            android:layout_alignParentLeft="true" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:background="@color/line"
                        android:layout_marginLeft="@dimen/home_pad_72">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_h_catal"
                        android:id="@+id/bl_catalog_three"
                        android:gravity="center_vertical">
                        <com.devspark.robototextview.widget.RobotoTextView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/home_text"
                            android:layout_marginLeft="@dimen/home_pad_72"
                            app:fontFamily="roboto"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Wight loss"
                            android:layout_alignParentLeft="true" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:background="@color/line"
                        android:layout_marginLeft="@dimen/home_pad_72">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <!--   Favorites   -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/block_favorites"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_h_catal"
                        android:id="@+id/bl_favorits"
                        android:gravity="center_vertical">
                        <com.devspark.robototextview.widget.RobotoTextView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/home_title"
                            android:layout_marginLeft="@dimen/home_pad_72"
                            app:fontFamily="roboto"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/favorites_string"
                            android:layout_alignParentLeft="true" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/med_ic_grey_right_arrow"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/home_pad_16" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:background="@color/line">
                    </LinearLayout>
                </LinearLayout>
             </LinearLayout>

                <!--   Recently viewed   -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/block_recently"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_h_catal"
                        android:id="@+id/bl_recently"
                        android:gravity="center_vertical">
                        <com.devspark.robototextview.widget.RobotoTextView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/home_title"
                            android:layout_marginLeft="@dimen/home_pad_72"
                            app:fontFamily="roboto"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/viewed_string"
                            android:layout_alignParentLeft="true" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/med_ic_grey_right_arrow"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/home_pad_16" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_height"
                        android:background="@color/line">
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>